syntax = "proto3";

package proto;
option java_package = "com.lynxanalytics.biggraph.graph_api.proto";

message VertexSet {
  repeated int64 ids = 1;
}
